# generate-gemini-voice

./: .gitignore  CODE_REVIEW.md  GEMINI.md  README.md  pyproject.toml
src/generate_gemini_voice/: cli.py  config.py  core.py  utils.py
tests/: conftest.py  test_auth.py  test_chunking.py  test_cli.py  test_core.py
